# recipe-social-network

./: .env.example  .gitignore  .test.env  README.md  all-commits-backup.txt  docker-compose.test.api.yml  docker-compose.yml  nats.conf  nginx.conf  package-lock.json  package.json  test-create-recipe.js
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_superuser.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_04_23_1546-62f16a034f71_add_token_user_models.py  2025_04_27_0834-e37cbee2a6fd_add_username_field_to_user_model.py  2025_04_27_1558-1ad550d1cc21_add_user_profile_model.py  2025_05_06_1922-30c9f797f0f3_add_banned_emails_model.py  2025_05_06_1923-fabbd49cbc3f_add_banned_domains_seed.py  2025_05_07_2019-d7a8f17a111e_add_recipe_related_models.py  2025_05_08_1439-aed69e6c0698_add_author_to_recipe.py  2025_05_08_1506-7943d3260ca2_add_recipe_id_to_recipe_related_models.py  2025_05_09_0622-aff6db829eda_fix_foreign_keys_in_recipe_related_.py  2025_05_09_0633-7ac05de64f68_make_author_id_recipe_field_nullable.py  2025_05_09_1653-9424f7e4299a_add_is_published_field_for_recipe_model.py  2025_05_10_1353-997bdb3435e1_make_recipe_image_url_field_nullable.py  2025_05_11_0942-226961a428c4_add_favorite_recipe_model.py  2025_05_22_1606-3f8f017cbad1_add_recipe_dislike_model.py  2025_05_24_1315-6b97f92a6e36_add_slug_field_for_recipe_model.py  2025_05_27_0523-c9c646c16cb9_add_anonymous_user_model.py  2025_05_27_0649-edee7f7b0fe7_add_recipe_impression_model.py  2025_05_27_0917-a4b7bc0e6ef7_add_unique_index_for_recipe_impression.py  2025_05_27_1240-76a67458161f_add_consent_model.py  2025_05_27_1800-45fe968dcd0e_add_search_query_model.py  2025_05_27_2101-cc1dd8e56ce8_add_unique_constraints_for_search_query_.py  2025_05_28_1245-bc7ff9bc457b_rename_image_url_to_image_path.py  2025_06_08_1900-f31e2dc4442e_add_shopping_list_item_model.py  2025_06_09_1416-b5501dadeb1b_add_is_from_recipe_column_make_quantity_.py  2025_06_11_0321-79e4af494c04_add_recipe_report_model_add_user_role_.py
backend/src/: dependencies.py  init_superuser.py  main.py  middlewares.py  utils.py
backend/src/adapters/: __init__.py  recommendations.py  redis.py  storage.py
backend/src/adapters/interfaces/: __init__.py  recommendations.py  redis.py
backend/src/adapters/search/: client.py  indexes.py  recipes_search.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py  banned_email.py  consent.py  disliked_recipe.py  favorite_recipe.py  recipe_reports.py  recipe_search.py  recipes.py  recommendations.py  shopping_list.py  user.py
backend/src/core/: config.py  exception_handlers.py  lifespan.py  redis.py  security.py
backend/src/core/di/: __init__.py  container.py
backend/src/db/: manager.py  uow.py
backend/src/enums/: __init__.py  feedback_type.py  recipe_difficulty.py  recipe_get_source.py  recipe_sort_field.py  report_reason.py  report_status.py  user_role.py
backend/src/exceptions/: __init__.py  anonymous_user.py  auth.py  banned_email.py  base.py  consent.py  disliked_recipe.py  favorite_recipe.py  http.py  image.py  recipe.py  recipe_impression.py  recipe_ingredient.py  recipe_report.py  recipe_search.py  shopping_list_item.py  user.py
backend/src/models/: __init__.py  anonymous_user.py  banned_email.py  base.py  consent.py  disliked_recipes.py  favorite_recipes.py  recipe.py  recipe_impression.py  recipe_ingredient.py  recipe_instructions.py  recipe_report.py  recipe_tag.py  search_query.py  shopping_list_item.py  token.py  user.py  user_profile.py
backend/src/repositories/: __init__.py  anonymous_user.py  banned_email.py  consent.py  disliked_recipe.py  favorite_recipe.py  recipe.py  recipe_image.py  recipe_impression.py  recipe_ingredient.py  recipe_instruction.py  recipe_report.py  recipe_search.py  recipe_tag.py  recsys_client.py  search_query.py  shopping_list_item.py  token.py  user.py  user_avatar.py  user_profile.py
backend/src/repositories/interfaces/: __init__.py  anonymous_user.py  banned_email.py  consent.py  disliked_recipe.py  favorite_recipe.py  recipe.py  recsys.py  (+13 more)
backend/src/schemas/: __init__.py  anonymous_user.py  banned_email.py  base.py  consent.py  direct_upload.py  disliked_recipe.py  favorite_recipe.py  recipe.py  recipe_impression.py  recipe_report.py  recsys_messages.py  search_query.py  shopping_list_item.py  token.py  user.py
backend/src/services/: __init__.py  anonymous_user.py  avatar.py  banned_email.py  consent.py  disliked_recipe.py  favorite_recipe.py  recipe.py  recipe_impression.py  recipe_instructions.py  recipe_report.py  recommendation.py  search.py  security.py  shopping_list_item.py  token.py  user.py
backend/src/typings/: __init__.py  not_provided.py  recipe_with_favorite.py
backend/src/utils/: __init__.py  partial_model.py  slug.py  validators.py
backend/tests/: conftest.py
backend/tests/fixtures/: app.py  auth.py  config.py  database.py  dishka_config.py  http_client.py  recipes.py
backend/tests/integration/: test_auth.py  test_disliked_recipes.py  test_favorite_recipes.py  test_recipe_deletion.py  test_recipe_search.py  test_search_history.py  test_user.py
recsys/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
recsys/alembic/: env.py
recsys/alembic/versions/: 2025_05_28_2338-ea46786ac9e2_add_user_impression_model.py  2025_05_28_2338-ff8cfc59f6b3_add_user_feedback_model.py  2025_05_29_2200-4a5f192891de_make_source_nullable.py  2025_05_30_1836-7053f8256f38_add_recipe_model.py
recsys/src/: create_qdrant_collection.py  worker.py
recsys/src/algorithms/: __init__.py  recommendation_algorithm.py
recsys/src/core/: config.py  stream.py
recsys/src/db/: manager.py
recsys/src/models/: __init__.py  base.py  recipe.py  user_feedback.py  user_impression.py
recsys/src/repositories/: embeddings.py  postgres.py  qdrant.py
recsys/src/schemas/: recommendations.py  tasks.py
recsys/src/services/: recs_service.py
recsys/src/tasks/: __init__.py  feedback.py  impressions.py  recipes.py  recommendations.py
(+294 files in other folders)
