[project]
name = "food-social-network"
version = "0.1.0"
description = "Food Social Network API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "redis>=5.2.1",
    "python-jose>=3.4.0",
    "passlib[argon2]>=1.7.4",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.1.13",
]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py311"
exclude = ["venv", ".venv", ".env"]

line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    # modules
    "C90", # mccabe complexity
    "DJ",  # django
    "T10", # debugger

    # specific rules
    "COM",    # flake8-commas
    "S104",   # binging to all interfaces
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",   # ignore one-line docstring
    "D203",
    "D212",
    "D213",
    "D400",
    "D415",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "S101",   # prohibited assert statement
    "INP001",
    "ARG001", # unused function argument
    "ANN401", # disallow Any type
    "RUF001", # string contrains ambigious o
]
format.skip-magic-trailing-comma = false


[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
show_error_context = true
show_absolute_path = true
pretty = true
ignore_missing_imports = true
strict = false
explicit_package_bases = true
